--- a/app/src/main/res/layout/fragment_troc_manager.xml
+++ b/app/src/main/res/layout/fragment_troc_manager.xml
@@ -8,7 +8,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="com.example.wlt_groupe03.ListArticleFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_list_article"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:tag="trocList"
+        tools:layout="@layout/fragment_list_article" />
 </FrameLayout>
