--- a/app/src/main/res/layout/fragment_add_items.xml
+++ b/app/src/main/res/layout/fragment_add_items.xml
@@ -22,14 +22,16 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
         android:name="com.example.wlt_groupe03.FormCreateArticleFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="98dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="348dp"
+        android:layout_height="671dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message"
+        app:layout_constraintVertical_bias="0.8"
         tools:layout="@layout/fragment_form_create_article" />
 
 
