--- a/app/src/main/res/layout/activity_adding_items.xml
+++ b/app/src/main/res/layout/activity_adding_items.xml
@@ -9,7 +9,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView_fragmentAddArticle"
-        android:name="com.example.wlt_groupe03.AddingItemsFragment"
+        android:name="com.example.wlt_groupe03.FormCreateArticleFragment"
         android:layout_width="385dp"
         android:layout_height="613dp"
         android:layout_marginBottom="44dp"
@@ -17,5 +17,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_add_items" />
+        tools:layout="@layout/fragment_form_create_article" />
 </androidx.constraintlayout.widget.ConstraintLayout>
