Ajout de la verification du cookie créer depuis le back pour acceder aux methodes necessitant une connexion + ajout de la liste d'article de l'utilisateur connecté + ajout de l'update sur les articles de l'utilisateur connecté

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_main_menu"
     tools:context=".MainMenuActivity">
 
 
@@ -57,10 +58,10 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_modify_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Modifier ses données" />
         </TableRow>
 
         <TableRow
