Ajout de la liste des articles de tout les utilisateurs et pour les rendre cliquable (voir les details) mais clic prolonger uniquement dans la section "Mes articles"

--- a/app/src/main/res/layout/activity_displaying_all_items.xml
+++ b/app/src/main/res/layout/activity_displaying_all_items.xml
@@ -3,20 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/detailArticle"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity">
-
+    tools:context=".DisplayingAllItems">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcv_detailArticle"
-        android:name="com.example.wlt_groupe03.DetailArticleFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="400dp"
+        android:id="@+id/fragmentContainerView2"
+        android:name="com.example.wlt_groupe03.ArticleFetchAllManager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_detail_article" />
+        tools:layout="@layout/fragment_article_fetch_all_manager" />
 </androidx.constraintlayout.widget.ConstraintLayout>
