--- a/app/src/main/res/layout/activity_displaying_users_items.xml
+++ b/app/src/main/res/layout/activity_displaying_users_items.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayingUsersItems">
+    tools:context=".DisplayingUsersItems"
+    android:background="@drawable/gradient_color_border"
+    >
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_listArticle"
