--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_color_background"
     tools:context=".MainActivity">
 
+
+    <EditText
+        android:id="@+id/et_password_user"
+        android:layout_width="169dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginBottom="77dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_email_user" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="394dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="220dp"
         android:height="48dp"
-        android:text="Button"
+        android:text="Se connecter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_password_user"
-        app:layout_constraintTop_toBottomOf="@+id/tv_password_user" />
-
-    <EditText
-        android:id="@+id/tv_password_user"
-        android:layout_width="199dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="73dp"
-        android:text="Password"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@+id/tv_email_user"
-        app:layout_constraintTop_toBottomOf="@+id/tv_email_user"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintEnd_toEndOf="@+id/et_password_user"
+        app:layout_constraintTop_toBottomOf="@+id/et_password_user" />
 
     <EditText
         android:id="@+id/tv_email_user"
-        android:layout_width="190dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="41dp"
-        android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/tv_password_user"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="52dp"
+        android:hint="Email"
+        app:layout_constraintBottom_toTopOf="@+id/et_password_user"
+        app:layout_constraintEnd_toEndOf="@+id/et_password_user"
+        app:layout_constraintStart_toStartOf="@+id/et_password_user"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
