--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/activity_main_menu"
-    tools:context=".MainMenuActivity">
+    tools:context=".MainMenuActivity"
+    android:background="@drawable/gradient_color_background">
 
 
     <TextView
@@ -25,7 +26,7 @@
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="409dp"
-        android:layout_height="442dp"
+        android:layout_height="370dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,7 @@
                 android:id="@+id/btn_display_all_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Afficher tout les articles"/>
+                android:text="Afficher tout les articles" />
         </TableRow>
 
         <TableRow
@@ -75,15 +76,6 @@
                 android:text="Afficher tout les utilisateurs" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-        </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
