--- a/app/src/main/res/layout/fragment_detail_article.xml
+++ b/app/src/main/res/layout/fragment_detail_article.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailArticleFragment">
+    tools:context=".DetailArticleFragment"
+    android:background="@drawable/gradient_color_background">
 
 
     <ImageView
