--- a/app/src/main/res/layout/fragment_form_create_article.xml
+++ b/app/src/main/res/layout/fragment_form_create_article.xml
@@ -7,24 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".FormCreateArticleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_nomArticle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="133dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginBottom="28dp"
         android:ems="10"
+        android:hint="Nom"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Nom"
+        app:layout_constraintBottom_toTopOf="@+id/et_imageArticle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,46 +27,60 @@
         android:id="@+id/et_imageArticle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="89dp"
         android:ems="10"
+        android:hint="Url Image"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Image"
-        app:layout_constraintStart_toStartOf="@+id/et_nomArticle"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/et_nomArticle"
         app:layout_constraintTop_toBottomOf="@+id/et_nomArticle" />
-
-    <EditText
-        android:id="@+id/et_categorieArticle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:text="Catégorie"
-        app:layout_constraintStart_toStartOf="@+id/et_imageArticle"
-        app:layout_constraintTop_toBottomOf="@+id/et_imageArticle" />
 
     <EditText
         android:id="@+id/et_descriptionArticle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginBottom="80dp"
         android:ems="10"
+        android:hint="Description Article"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Description"
-        app:layout_constraintStart_toStartOf="@+id/et_categorieArticle"
-        app:layout_constraintTop_toBottomOf="@+id/et_categorieArticle" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_addItems"
+        app:layout_constraintStart_toStartOf="@+id/s_category"
+        app:layout_constraintTop_toBottomOf="@+id/s_category" />
 
     <Button
         android:id="@+id/btn_addItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
+        android:layout_marginBottom="134dp"
         android:text="Ajouter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_descriptionArticle" />
+
+    <Spinner
+        android:id="@+id/s_category"
+        android:layout_width="203dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="61dp"
+        android:contentDescription="Selectionner une catégorie"
+        android:tag="category"
+        app:layout_constraintBottom_toTopOf="@+id/et_descriptionArticle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="203dp"
+        android:layout_height="0dp"
+        android:text="Selectionner une catégorie"
+        app:layout_constraintBottom_toTopOf="@+id/s_category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_imageArticle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
