--- a/app/src/main/res/layout/activity_displaying_all_items.xml
+++ b/app/src/main/res/layout/activity_displaying_all_items.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayingAllItems"
-    android:background="@drawable/gradient_color_border">
+    android:background="@drawable/gradient_color_border"
+    tools:context=".DisplayingAllItems">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
         android:name="com.example.wlt_groupe03.ArticleFetchAllManager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_article_fetch_all_manager"
-       />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_article_fetch_all_manager" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
