--- a/app/src/main/res/layout/activity_display_users.xml
+++ b/app/src/main/res/layout/activity_display_users.xml
@@ -4,18 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayUsersActivity"
-    >
+    tools:context=".DisplayUsersActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView4"
         android:name="com.example.wlt_groupe03.UsersManagerFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/fragment_users_manager"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout="@layout/fragment_users_manager" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="411dp"
+        android:layout_height="67dp"
+        android:background="@drawable/gradient_color_background"
+        android:gravity="center"
+        android:text="Veuillez faire un appuie prolongé sur un des utilisateurs pour connaître le trajet vous menant chez cette personne"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
