--- a/app/src/main/res/layout/activity_displaying_users_items.xml
+++ b/app/src/main/res/layout/activity_displaying_users_items.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayingUsersItems"
     android:background="@drawable/gradient_color_border"
-    >
+    tools:context=".DisplayingUsersItems">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_listArticle"
         android:name="com.example.wlt_groupe03.TrocManagerFragment"
-        android:layout_width="398dp"
-        android:layout_height="723dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_troc_manager" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
