--- a/app/src/main/res/layout/fragment_form_create_article.xml
+++ b/app/src/main/res/layout/fragment_form_create_article.xml
@@ -83,4 +83,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_imageArticle" />
 
+    <Button
+        android:id="@+id/btn_addCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Prendre une photo"
+        app:layout_constraintEnd_toEndOf="@+id/et_imageArticle"
+        app:layout_constraintStart_toStartOf="@+id/et_imageArticle"
+        app:layout_constraintTop_toBottomOf="@+id/et_imageArticle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
